--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "axios": "^1.9.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
